--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -22,14 +22,14 @@
         <section>
             <h1>Bienvenidos a "Mis Recetas"</h1>
             <h2>Un sitio web donde aprenderás las mejores recetas del universo</h2>
-            <img src="./img/imgprincipal.PNG" alt="imagen de comida">
+            <img src="imagenes/imgprincipal.PNG" alt="imagen de comida">
         </section>
     </main>
 
     <footer>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="imagenes/whatsapp_PNG1.png" alt="imagen whatsapp" width="32">
+        <img src="imagenes/tlf.com.png" alt="imagen teléfono" width="30">
+        <img src="imagenes/mensaje.com.png" alt="foto mensaje" width="30">
     </footer>
 </body>
 
