--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Recetas</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
@@ -20,17 +19,13 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Bienvenidos a "Mis Recetas"</h1>
-            <h2>Un sitio web donde aprenderás las mejores recetas del universo</h2>
-            <img src="./img/imgprincipal.PNG" alt="imagen de comida">
-        </section>
+
     </main>
 
     <footer>
-        <i class="fa-brands fa-whatsapp"></i>
-        <i class="fa-regular fa-envelope"></i>
-        <i class="fa-light fa-phone"></i>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
     </footer>
 </body>
 
