Agregando info paginas recetas y contacto

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li>Inicio</li>
-                <li>Recetas</li>
-                <li>Contacto</li>
+                <li><a href="./pages/recetas.html">Recetas</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
