--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -12,21 +12,36 @@
     <header>
         <nav>
             <ul>
-                <li>Inicio</li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li>Recetas</li>
-                <li>Contacto</li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <article>
+            <h2>Solomillo Wellington</h2>
+            <img src="../imagenes/solomillo.jpg" alt="Solomillo Wellington">
+        </article>
+        <article>
+            <h2>Lubina con patatas</h2>
+            <img src="../imagenes/lubina_patatas.jpg" alt="lubina con patatas">
+        </article>
+        <article>
+            <h2>Pollo guisado</h2>
+            <img src="../imagenes/pollo_guisado.jpg" alt="pollo guisado">
+        </article>
+        <article>
+            <h2>Croquetas de jamón</h2>
+            <img src="../imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+        </article>
     </main>
-    
+
 
     <footer>
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="../imagenes/whatsapp_PNG1.png" alt="imagen whatsapp" width="32">
+        <img src="../imagenes/tlf.com.png" alt="imagen teléfono" width="30">
+        <img src="../imagenes/mensaje.com.png" alt="foto mensaje" width="30">
     </footer>
 </body>
 
