--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>Recetas</li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/recetas.html">Recetas</a></li>
                 <li>Contacto</li>
             </ul>
         </nav>
@@ -23,7 +23,7 @@
 
         </form>
     </main>
-    
+
 
     <footer>
         <img src="" alt="">
