Agregando las paginas de recetas individuales

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -21,19 +21,27 @@
     <main>
         <article>
             <h2>Solomillo Wellington</h2>
-            <img src="../imagenes/solomillo.jpg" alt="Solomillo Wellington">
+            <a href="../pages/solomillo.html">
+                <img src="../imagenes/solomillo.jpg" alt="Solomillo Wellington">
+            </a>
         </article>
         <article>
             <h2>Lubina con patatas</h2>
-            <img src="../imagenes/lubina_patatas.jpg" alt="lubina con patatas">
+            <a href="../pages/lubina.html">
+                <img src="../imagenes/lubina_patatas.jpg" alt="lubina con patatas">
+            </a>
         </article>
         <article>
             <h2>Pollo guisado</h2>
-            <img src="../imagenes/pollo_guisado.jpg" alt="pollo guisado">
+            <a href="../pages/pollo_guisado.html">
+                <img src="../imagenes/pollo_guisado.jpg" alt="pollo guisado">
+            </a>
         </article>
         <article>
             <h2>Croquetas de jamón</h2>
-            <img src="../imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+            <a href="../pages/croquetas_jamon.html">
+                <img src="../imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+            </a>
         </article>
     </main>
 
