--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -28,9 +28,9 @@
     
 
     <footer>
-        <img src="imagenes/whatsapp_PNG1.png" alt="imagen whatsapp" width="32">
-        <img src="imagenes/tlf.com.png" alt="imagen teléfono" width="30">
-        <img src="imagenes/mensaje.com.png" alt="foto mensaje" width="30">
+        <img src="../imagenes/whatsapp_PNG1.png" alt="imagen whatsapp" width="32">
+        <img src="../imagenes/tlf.com.png" alt="imagen teléfono" width="30">
+        <img src="../imagenes/mensaje.com.png" alt="foto mensaje" width="30">
     </footer>
     
 </body>
