--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li>Inicio</li>
-                <li><a href="./pages/recetas.html">Recetas</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="./recetas.html">Recetas</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
