--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
@@ -20,7 +21,9 @@
     </header>
     <main>
         <form action="">
-
+            <i class="fa-solid fa-user"></i>
+            <i class="fa-regular fa-envelope"></i>
+            <i class="fa-brands fa-whatsapp"></i>
         </form>
     </main>
 
