--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,9 +25,9 @@
             <i class="fa-solid fa-user"></i>
             <input type="text" name="nombre" placeholder="Nombre"><br>
             <i class="fa-regular fa-envelope"></i>
-            <input type="text" name="correo" placeholder="Email"><br>
+            <input type="email" name="correo" placeholder="Email"><br>
             <i class="fa-brands fa-whatsapp"></i>
-            <input type="text" name="teléfono" placeholder="Teléfono"><br>
+            <input type="tel" name="teléfono" placeholder="Teléfono"><br>
             <textarea name="Mensaje" id="msj" cols="30" rows="10"></textarea><br>
         </form>
     </main>
