Actualizando iconos del footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Recetas</title>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
@@ -26,12 +27,12 @@
             <img src="imagenes/imgprincipal.PNG" alt="imagen de comida">
         </section>
     </main>
-    
+
 
     <footer>
-        <img src="imagenes/whatsapp_PNG1.png" alt="imagen whatsapp" width="32">
-        <img src="imagenes/tlf.com.png" alt="imagen teléfono" width="30">
-        <img src="imagenes/mensaje.com.png" alt="foto mensaje" width="30">
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-regular fa-envelope"></i>
     </footer>
 </body>
 
