--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body>
@@ -34,9 +35,9 @@
 
 
     <footer>
-        <img src="../imagenes/whatsapp_PNG1.png" alt="imagen whatsapp" width="32">
-        <img src="../imagenes/tlf.com.png" alt="imagen teléfono" width="30">
-        <img src="../imagenes/mensaje.com.png" alt="foto mensaje" width="30">
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-regular fa-envelope"></i>
     </footer>
 </body>
 
