--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,6 +29,7 @@
             <i class="fa-brands fa-whatsapp"></i>
             <input type="tel" name="teléfono" placeholder="Teléfono"><br>
             <textarea name="Mensaje" id="msj" cols="30" rows="10"></textarea><br>
+            <input type="submit" name="enviar" value="Enviar">
         </form>
     </main>
 
