Correcciones de links y algunos iconos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
             <input type="text" name="nombre" placeholder="Nombre"><br>
             <i class="fa-regular fa-envelope"></i>
             <input type="email" name="correo" placeholder="Email"><br>
-            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-sharp fa-solid fa-phone"></i>
             <input type="tel" name="teléfono" placeholder="Teléfono"><br>
             <textarea name="Mensaje" id="msj" cols="30" rows="10"></textarea><br>
             <input type="submit" name="enviar" value="Enviar">
