agregando pagina receta videos y videos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li>Inicio</li>
                 <li><a href="./pages/recetas.html">Recetas</a></li>
+                <li><a href="./pages/video_recetas.html">Video recetas</a></li>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -24,7 +25,7 @@
         <section>
             <h1>Bienvenidos a "Mis Recetas"</h1>
             <h2>Un sitio web donde aprenderás las mejores recetas del universo</h2>
-            <img src="imagenes/imgprincipal.PNG" alt="imagen de comida">
+            <img src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
         </section>
     </main>
 
