--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li>Recetas</li>
+                <li><a href="./video_recetas.html">Video recetas</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -24,25 +25,25 @@
         <article>
             <h2>Solomillo Wellington</h2>
             <a href="../pages/solomillo.html">
-                <img src="../imagenes/solomillo.jpg" alt="Solomillo Wellington">
+                <img src="../multimedia/imagenes/solomillo.jpg" alt="Solomillo Wellington">
             </a>
         </article>
         <article>
             <h2>Lubina con patatas</h2>
             <a href="../pages/lubina.html">
-                <img src="../imagenes/lubina_patatas.jpg" alt="lubina con patatas">
+                <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="lubina con patatas">
             </a>
         </article>
         <article>
             <h2>Pollo guisado</h2>
             <a href="../pages/pollo_guisado.html">
-                <img src="../imagenes/pollo_guisado.jpg" alt="pollo guisado">
+                <img src="../multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
             </a>
         </article>
         <article>
             <h2>Croquetas de jamón</h2>
             <a href="../pages/croquetas_jamon.html">
-                <img src="../imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+                <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
             </a>
         </article>
     </main>
