--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/recetas.html">Recetas</a></li>
+                <li><a href="../pages/video_recetas.html">Video recetas</a></li>
                 <li>Contacto</li>
             </ul>
         </nav>
