--- a/pages/croquetas_jamon.html
+++ b/pages/croquetas_jamon.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./recetas.html">Recetas</a></li>
+                <li><a href="./video_recetas.html">Video recetas</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -22,7 +23,7 @@
         <p><a href="./recetas.html">Recetas</a>> Croquetas de jamón</p>
         <section>
             <h2>Croquetas de jamón</h2>
-            <img src="../imagenes/croquetas_jamon.jpg" alt="Croquetas de jamón">
+            <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="Croquetas de jamón">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores enim officia tempora a! Voluptatum!</p>
         </section>
