--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./recetas.html">Recetas</a></li>
+                <li><a href="./video_recetas.html">Video recetas</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -22,7 +23,7 @@
         <p><a href="./recetas.html">Recetas</a>> Lubina con patatas</p>
         <section>
             <h2>Lubina con patatas</h2>
-            <img src="../imagenes/lubina_patatas.jpg" alt="Lubina con patatas">
+            <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="Lubina con patatas">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores enim officia tempora a! Voluptatum!</p>
         </section>
