--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <!-- Cambiando el logo por un png -->
-        <a href="./index.html">
+        <a href="../index.html">
             <img class="img_logo" src="../multimedia/imagenes/logo_recetas.png" alt="logo pagina">
         </a>
         <nav>
