Modificación recetas, header y footer

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Agregando icono al title -->
     <link rel="shortcut icon" href="./multimedia/imagenes/logo_recetas.png">
-    <!-- El siguiente link irá en todas las páginas, en primer orden, como configuración general -->
-    <link rel="stylesheet" href="./css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
     <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -35,9 +33,9 @@
         <!-- Agregando un contenedor para limitar las pantallas grandes -->
         <div class="container">
             <section>
-                <h1>Bienvenidos a "Mis Recetas"</h1>
-                <h2>Un sitio web donde aprenderás las mejores recetas del universo</h2>
-                <img src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
+                <h1>Bienvenidos a "Mis Recetas"</h1><br>
+                <h2 class="descripcion_pag">Un sitio web donde aprenderás las <br> mejores recetas del universo</h2><br>
+                <img class="img_principal" src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
             </section>
         </div>
     </main>
