--- a/pages/pollo_guisado.html
+++ b/pages/pollo_guisado.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,11 +35,50 @@
         <section>
             <h2>Pollo guisado</h2>
             <img src="../multimedia/imagenes/pollo_guisado.jpg" alt="Pollo guisado">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores enim officia tempora a! Voluptatum!</p>
+            <p><b>Tiempo de preparación:</b> 20 minutos <b>| Tiempo total:</b> 75 minutos</p>
+            <h2>Ingredientes (para 4 personas):</h2>
+            <ul>
+                <li>8 jamoncitos de pollo</li>
+                <li>2 cebollas</li>
+                <li>4 dientes de ajo</li>
+                <li>2 zanahorias gorditas</li>
+                <li>2 patatas</li>
+                <li>10 champiñones</li>
+                <li>100 ml de vino blanco</li>
+                <li>200 ml de agua</li>
+                <li>1 pastilla de Avecrem Caldo de Pollo</li>
+                <li>harina para rebozar</li>
+                <li>aceite de oliva</li>
+                <li>Sal</li>
+                <li>Pimienta negra</li>
+                <li>perejil picado</li>
+            </ul>
+            <h2>Elaboración del guiso:</h2>
+            <p>Pela y pica el ajo y la cebolla (no demasiado fino). Pon una cazuela ancha al fuego y añade aceite.
+                Cuando empiece a calentarse, añade el ajo y deja que se dore. Luego incorpora la cebolla, revuelve bien
+                y deja que se sofría todo hasta dorarse y notar que las verduras se han ablandado.</p><br>
+            <p>Sazona y salpimenta el pollo, rebózalo con harina y quítale el exceso de ella.</p><br>
+            <p>Fríe los muslos de pollo en una sartén con aceite caliente. Cuando estén bien dorados, sácalos a un plato
+                o fuente y resérvalos.</p><br>
+            <p>Añade el pollo a la cazuela de ajo y cebolla y revuelve. Incorpora el vino y deja que se evapore. Luego
+                añade un vaso de agua (o 200 ml.).</p><br>
+            <p>Desmenuza una pastilla de caldo Avecrem por encima de los muslos de pollo y las verduras. Deja que se
+                cocine a fuego suave unos 15 minutos, y mientras prepara la guarnición del guiso.</p><br>
+            <p>Pela las patatas y córtalas den dados. Añádelas en un recipiente con agua para que suelte la fécula. Pela
+                las zanahorias y córtalas en medias lunas gorditas. Limpia los champiñones y córtalos en cuartos.</p>
+            <br>
+            <p>Pon una sartén al fuego con abundante aceite y cuando coja calor, añade las patatas (ya escurridas y
+                secas) para freír. Deja que se frían (moviéndolas para que no se peguen ni se quemen) durante unos 10
+                minutos aproximadamente.</p><br>
+            <p>Incorpora la zanahoria y los champiñones, remueve y deja que todo se fría otros 5 minutos sin dejar de
+                remover. Una vez esté todo dorado, sácalo a un plato con papel absorbente.</p><br>
+            <p>Luego añádelo a la cazuela del guiso de pollo y mezcla todo con cuidado.</p><br>
+            <p>Prueba de sal y deja que se cocine todo junto unos 4 minutos más o menos. Apaga el fuego y esparce un
+                poco de perejil picado por encima del guiso.</p><br>
+            <p>¡Y listo! Ya podréis disfrutar de un sabroso y apetitoso estofado de pollo al estilo de la abuela.</p>
         </section>
     </main>
-    
+
 
     <footer>
         <!-- Agregando links -->
@@ -52,6 +92,7 @@
             <i class="fa-regular fa-envelope"></i>
         </a>
     </footer>
-    
+
 </body>
+
 </html>
