--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,8 +11,6 @@
     <link rel="shortcut icon" href="../multimedia/imagenes/logo_recetas.png">
     <!-- El siguiente link irá en todas las páginas, en primer orden, como configuración general -->
     <link rel="stylesheet" href="../css/general.css">
-    <!-- El siguiente link es personalizado según la página, en este caso para el index -->
-    <link rel="stylesheet" href="../css/contacto.css">
 </head>
 
 <body>
@@ -39,11 +37,17 @@
             <input type="email" name="correo" placeholder="Email"><br>
             <i class="fa-sharp fa-solid fa-phone"></i>
             <input type="tel" name="teléfono" placeholder="Teléfono"><br>
-            <textarea name="Mensaje" id="msj" cols="30" rows="10"></textarea><br>
+            <textarea name="Mensaje" id="msj" cols="30" rows="10" placeholder="Comentario..."></textarea><br>
             <input type="submit" name="enviar" value="Enviar">
         </form>
-    </main>
+        <section> 
+            <h2>Dirección</h2>
+            <iframe class="borde_mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.7001266958177!2d-58.472233099999976!3d-34.6875171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc90e57948b91%3A0x7c8136ba3f138ee5!2sLa%20Receta%20Perfecta!5e0!3m2!1ses!2sar!4v1675730120045!5m2!1ses!2sar"
+                width="450" height="300" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
 
+    </main>
 
     <footer>
         <!-- Agregando links -->
