--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,13 +33,37 @@
     <main>
         <p><a href="./recetas.html">Recetas</a>> Lubina con patatas</p>
         <section>
+
             <h2>Lubina con patatas</h2>
             <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="Lubina con patatas">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores enim officia tempora a! Voluptatum!</p>
+            <p><b>Tiempo de preparación:</b> 10 minutos <b>| Tiempo de cocción:</b> 30 minutos <b>| Tiempo total:</b> 40
+                minutos</p>
+            <h2>Ingredientes:</h2>
+            <ul>
+                <li>1.5 kg de Lubina grande</li>
+                <li>1 Patata</li>
+                <li>1 Cebolla</li>
+                <li>Aceite de oliva virgen extra</li>
+                <li>75 ml de Agua</li>
+            </ul>
+            <h2>Elaboración de la receta de Lubina con patatas paso a paso:</h2><br>
+            <p>Comenzamos cortando las patatas con una mandolina. Con una grande o dos de buen tamaño podréis cubrir la
+                bandeja del horno. Después picamos la cebolla en juliana fina, y la repartimos sobre las patatas.
+                Añadimos un poco de sal, un chorrito de aceite de oliva virgen extra, 75 ml de agua y horneamos durante
+                quince minutos a 180º.</p><br>
+            <p>En la pescadería habremos pedido que nos preparen la lubina abierta para asar a la espalda pero
+                pediremos que nos dejen la raspa en un lado. Esto nos servirá para controlar cuando está el pescado en
+                su punto, sin importar el tamaño de la pieza. Luego lo vemos. Salpimentamos el pescado y pincelamos con
+                una pizca de aceite y lo metemos en el horno sobre las patatas que ya estarán empezando a cocinarse.</p><br>
+            <p>Dejamos que el pescado se ase a la misma temperatura hasta que metiendo una puntilla por debajo de la
+                raspa, veamos que se levanta con facilidad y entonces apagamos el horno y sacamos la fuente. El tiempo
+                necesario estará entre los 12 y los 20 minutos dependiendo del tamaño de la pieza.</p><br>
+            <p>Retiramos el pescado de la fuente del horno, quitamos la raspa y lo ponemos en una fuente para servirlo
+                con su guarnición. Si las patatas no estuvieran o si vemos que es necesario que se doren un poco más,
+                metemos las patatas otros cinco minutos al horno.</p>
         </section>
     </main>
-    
+
 
     <footer>
         <!-- Agregando links -->
@@ -52,6 +77,7 @@
             <i class="fa-regular fa-envelope"></i>
         </a>
     </footer>
-    
+
 </body>
+
 </html>
