--- a/pages/croquetas_jamon.html
+++ b/pages/croquetas_jamon.html
@@ -34,8 +34,27 @@
         <section>
             <h2>Croquetas de jamón</h2>
             <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="Croquetas de jamón">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores enim officia tempora a! Voluptatum!</p>
+            <p><b>Tiempo de preparación:</b> 25 minutos <b>| Tiempo total:</b> 50 minutos</p>
+            <h2>Ingredientes (6 personas):</h2>
+            <li>200 g de jamón serrano</li>
+            <li>1 cebolleta</li>
+            <li>1 diente de ajo</li>
+            <li>100 g de harina</li>
+            <li>100 g de mantequilla (o 100 ml de aceite de oliva virgen extra)</li>
+            <li>1 l de lecheperejil</li>
+            <h2>Para rebozar y freír</h2>
+            <li>Harina</li>
+            <li>3 huevos batidos</li>
+            <li>Pan rallado</li>
+            <li>aceite de oliva virgen extra</li>
+            <h2>Elaboración de la receta croquetas de jamón paso a paso:</h2>
+            <p>Corta la mantequilla en dados y ponla a derretir en una cazuela. Pica finamente la cebolleta y el diente de ajo y añádelos a la cazuela. Rehoga durante 5-6 minutos, incorpora el jamón picado y saltéalo.</p><br>
+            <p>Añade la harina y rehoga bien. Vierte la leche poco a poco, sin dejar de remover. Cocina la bechamel durante 20 minutos aproximadamente removiendo constantemente. Espolvorea con perejil picado.</p><br>
+            <p>Extiende la masa sobre una fuente. Unta la superficie con un poco de mantequilla para que no se haga costra o cubre con papel film y déjala enfriar.</p><br>
+            <p>Cuando la masa esté fría, corta y moldea las croquetas.</p><br>
+            <p>Enharina, pasa por huevo y pan rallado y fríelas en aceite bien caliente.</p><br>
+            <p>Cuando estén hechas, retíralas de la sartén y ponlas a escurrir el exceso de aceite sobre un plato cubierto con papel de cocina.</p><br>
+            <p>Sirve las croquetas de jamón.</p>
         </section>
     </main>
     
