--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -46,7 +46,7 @@
                 <li>Aceite de oliva virgen extra</li>
                 <li>75 ml de Agua</li>
             </ul>
-            <h2>Elaboración de la receta de Lubina con patatas paso a paso:</h2><br>
+            <h2>Elaboración de la receta de lubina con patatas paso a paso:</h2><br>
             <p>Comenzamos cortando las patatas con una mandolina. Con una grande o dos de buen tamaño podréis cubrir la
                 bandeja del horno. Después picamos la cebolla en juliana fina, y la repartimos sobre las patatas.
                 Añadimos un poco de sal, un chorrito de aceite de oliva virgen extra, 75 ml de agua y horneamos durante
