--- a/pages/pollo_guisado.html
+++ b/pages/pollo_guisado.html
@@ -53,7 +53,7 @@
                 <li>Pimienta negra</li>
                 <li>perejil picado</li>
             </ul>
-            <h2>Elaboración del guiso:</h2>
+            <h2>Elaboración de la receta de pollo guisado paso a paso:</h2>
             <p>Pela y pica el ajo y la cebolla (no demasiado fino). Pon una cazuela ancha al fuego y añade aceite.
                 Cuando empiece a calentarse, añade el ajo y deja que se dore. Luego incorpora la cebolla, revuelve bien
                 y deja que se sofría todo hasta dorarse y notar que las verduras se han ablandado.</p><br>
