--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -59,7 +59,7 @@
                 <li>20 gr de mantequilla</li>
                 <li>Canela en polvo</li>
             </ul>
-            <h2>Elaboración de la receta de solomillo Wellington paso a paso:</h2><br>
+            <h2>Elaboración de la receta de solomillo wellington paso a paso:</h2><br>
             <p>En primer lugar, para sellar el solomillo salpimienta y dóralo a fuego lento en una sartén con un
                 chorrito de aceite. Cuando esté dorado, retíralo de la sartén y deja que se enfríe completamente.</p>
             <br>
