agregrando correcciones menores

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,8 @@
                 width="450" height="300" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
     <footer>
