--- a/pages/croquetas_jamon.html
+++ b/pages/croquetas_jamon.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,11 +35,16 @@
         <section>
             <h2>Croquetas de jamón</h2>
             <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="Croquetas de jamón">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores enim officia tempora a! Voluptatum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, eligendi quos pariatur deserunt ducimus
+                recusandae suscipit necessitatibus dicta ad voluptatem? Illo ipsum dolores minus eius placeat delectus
+                eos dignissimos. Aperiam laudantium maiores unde ex. Dignissimos quis quae minus eum cum?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt omnis totam officiis molestias dolores
+                enim officia tempora a! Voluptatum!</p>
         </section>
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
-    
+
 
     <footer>
         <!-- Agregando links -->
@@ -52,6 +58,7 @@
             <i class="fa-regular fa-envelope"></i>
         </a>
     </footer>
-    
+
 </body>
+
 </html>
