--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -54,7 +54,8 @@
             <p>En la pescadería habremos pedido que nos preparen la lubina abierta para asar a la espalda pero
                 pediremos que nos dejen la raspa en un lado. Esto nos servirá para controlar cuando está el pescado en
                 su punto, sin importar el tamaño de la pieza. Luego lo vemos. Salpimentamos el pescado y pincelamos con
-                una pizca de aceite y lo metemos en el horno sobre las patatas que ya estarán empezando a cocinarse.</p><br>
+                una pizca de aceite y lo metemos en el horno sobre las patatas que ya estarán empezando a cocinarse.</p>
+            <br>
             <p>Dejamos que el pescado se ase a la misma temperatura hasta que metiendo una puntilla por debajo de la
                 raspa, veamos que se levanta con facilidad y entonces apagamos el horno y sacamos la fuente. El tiempo
                 necesario estará entre los 12 y los 20 minutos dependiendo del tamaño de la pieza.</p><br>
@@ -62,6 +63,8 @@
                 con su guarnición. Si las patatas no estuvieran o si vemos que es necesario que se doren un poco más,
                 metemos las patatas otros cinco minutos al horno.</p>
         </section>
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
 
