--- a/pages/pollo_guisado.html
+++ b/pages/pollo_guisado.html
@@ -77,6 +77,8 @@
                 poco de perejil picado por encima del guiso.</p><br>
             <p>¡Y listo! Ya podréis disfrutar de un sabroso y apetitoso estofado de pollo al estilo de la abuela.</p>
         </section>
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
 
