--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -93,6 +93,8 @@
                 al vapor. También te recomendamos preparar una salsa para solomillo Wellington, que le dará un toque
                 fresco y personal.</p>
         </section>
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
 
