--- a/pages/video_recetas.html
+++ b/pages/video_recetas.html
@@ -39,6 +39,8 @@
             <source src="../multimedia/video/solomillo_wellington.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video>
+                  <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
 
