--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- Agregando icono al title -->
     <link rel="shortcut icon" href="./multimedia/imagenes/logo_recetas.png">
+    <link rel="stylesheet" href="./css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
     <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -38,6 +39,8 @@
                 <img class="img_principal" src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
             </section>
         </div>
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
 
