--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -53,6 +53,8 @@
                 <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
             </a>
         </article>
+                <!-- Imagenes de fondo -->
+                <div class="background-img"></div>
     </main>
 
 
