agregando otros cambios

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -29,32 +29,34 @@
         </nav>
     </header>
     <main>
-        <article>
-            <h2>Solomillo Wellington</h2>
-            <a href="../pages/solomillo.html">
-                <img src="../multimedia/imagenes/solomillo.jpg" alt="Solomillo Wellington">
-            </a>
-        </article>
-        <article>
-            <h2>Lubina con patatas</h2>
-            <a href="../pages/lubina.html">
-                <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="lubina con patatas">
-            </a>
-        </article>
-        <article>
-            <h2>Pollo guisado</h2>
-            <a href="../pages/pollo_guisado.html">
-                <img src="../multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
-            </a>
-        </article>
-        <article>
-            <h2>Croquetas de jamón</h2>
-            <a href="../pages/croquetas_jamon.html">
-                <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
-            </a>
-        </article>
-                <!-- Imagenes de fondo -->
-                <div class="background-img"></div>
+        <div class="container">
+            <article>
+                <h2>Solomillo Wellington</h2>
+                <a href="../pages/solomillo.html">
+                    <img src="../multimedia/imagenes/solomillo.jpg" alt="Solomillo Wellington">
+                </a>
+            </article>
+            <article>
+                <h2>Lubina con patatas</h2>
+                <a href="../pages/lubina.html">
+                    <img src="../multimedia/imagenes/lubina_patatas.jpg" alt="lubina con patatas">
+                </a>
+            </article>
+            <article>
+                <h2>Pollo guisado</h2>
+                <a href="../pages/pollo_guisado.html">
+                    <img src="../multimedia/imagenes/pollo_guisado.jpg" alt="pollo guisado">
+                </a>
+            </article>
+            <article>
+                <h2>Croquetas de jamón</h2>
+                <a href="../pages/croquetas_jamon.html">
+                    <img src="../multimedia/imagenes/croquetas_jamon.jpg" alt="croquetas de jamón">
+                </a>
+            </article>
+        </div>
+        <!-- Imagenes de fondo -->
+        <div class="background-img"></div>
     </main>
 
 
