--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <!-- Agregando un contenedor para limitar las pantallas grandes -->
         <div class="container">
             <section>
-                <h1>Bienvenidos a "Mis Recetas"</h1><br>
-                <h2 class="descripcion_pag">Un sitio web donde aprenderás las <br> mejores recetas del universo</h2><br>
+                <h1>Bienvenidos a "Mis Recetas"</h1>
+                <h2 class="descripcion_pag">Un sitio web donde aprenderás las mejores recetas del universo</h2><br>
                 <img class="img_principal" src="./multimedia/imagenes/imgprincipal.PNG" alt="imagen de comida">
             </section>
         </div>
