--- a/pages/solomillo.html
+++ b/pages/solomillo.html
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <main>
+        <div class="container">
         <p><a href="./recetas.html">Recetas</a>> Solomillo a la Wellington</p>
         <section>
             <h2>Solomillo Wellington</h2>
@@ -93,6 +94,7 @@
                 al vapor. También te recomendamos preparar una salsa para solomillo Wellington, que le dará un toque
                 fresco y personal.</p>
         </section>
+    </div>
         <!-- Imagenes de fondo -->
         <div class="background-img"></div>
     </main>
