--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="../multimedia/imagenes/logo_recetas.png">
     <!-- El siguiente link irá en todas las páginas, en primer orden, como configuración general -->
     <link rel="stylesheet" href="../css/general.css">
+    <link rel="stylesheet" href="../css/recetas.css">
 </head>
 
 <body>
