--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -12,7 +12,7 @@
     <!-- El siguiente link irá en todas las páginas, en primer orden, como configuración general -->
     <link rel="stylesheet" href="../css/general.css">
     <!-- El siguiente link es personalizado según la página, en este caso para el index -->
-    <link rel="stylesheet" href="../css/recetas.css">
+    <link rel="stylesheet" href="../css/recetas_general.css">
 </head>
 
 <body>
