--- a/pages/video_recetas.html
+++ b/pages/video_recetas.html
@@ -33,13 +33,13 @@
     <main>
         <div class="container">
             <h1>Pollo guisado</h1>
-            <iframe width="320" height="240" src="https://www.youtube.com/embed/fJoLYnYJOy0"
+            <iframe src="https://www.youtube.com/embed/fJoLYnYJOy0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <br>
             <h1>Solomillo a la wellington</h1>
-            <video width="320" height="240" controls>
+            <video  controls>
                 <source src="../multimedia/video/solomillo_wellington.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
