--- a/pages/croquetas_jamon.html
+++ b/pages/croquetas_jamon.html
@@ -52,13 +52,20 @@
                     <li>pan rallado</li>
                     <li>virgen extra</li>
                 </ul>
+            </section>
+            <section>
                 <h2>Elaboración de la receta Croquetas de jamón paso a paso</h2>
-                <p>Corta la mantequilla en dados y ponla a derretir en una cazuela. Pica finamente la cebolleta y el diente de ajo y añádelos a la cazuela. Rehoga durante 5-6 minutos, incorpora el jamón picado y saltéalo.</p>
-                <p>Añade la harina y rehoga bien. Vierte la leche poco a poco, sin dejar de remover. Cocina la bechamel durante 20 minutos aproximadamente removiendo constantemente. Espolvorea con perejil picado.</p>
-                <p>Extiende la masa sobre una fuente. Unta la superficie con un poco de mantequilla para que no se haga costra o cubre con papel film y déjala enfriar.</p>
+                <p>Corta la mantequilla en dados y ponla a derretir en una cazuela. Pica finamente la cebolleta y el
+                    diente de ajo y añádelos a la cazuela. Rehoga durante 5-6 minutos, incorpora el jamón picado y
+                    saltéalo.</p>
+                <p>Añade la harina y rehoga bien. Vierte la leche poco a poco, sin dejar de remover. Cocina la bechamel
+                    durante 20 minutos aproximadamente removiendo constantemente. Espolvorea con perejil picado.</p>
+                <p>Extiende la masa sobre una fuente. Unta la superficie con un poco de mantequilla para que no se haga
+                    costra o cubre con papel film y déjala enfriar.</p>
                 <p>Cuando la masa esté fría, corta y moldea las croquetas.</p>
                 <p>Enharina, pasa por huevo y pan rallado y fríelas en aceite bien caliente.</p>
-                <p>Cuando estén hechas, retíralas de la sartén y ponlas a escurrir el exceso de aceite sobre un plato cubierto con papel de cocina.</p>
+                <p>Cuando estén hechas, retíralas de la sartén y ponlas a escurrir el exceso de aceite sobre un plato
+                    cubierto con papel de cocina.</p>
                 <p>Sirve las croquetas de jamón.</p>
             </section>
         </div>
