--- a/pages/lubina.html
+++ b/pages/lubina.html
@@ -48,13 +48,15 @@
                     <li>Aceite de oliva virgen extra</li>
                     <li>75 ml de Agua</li>
                 </ul>
-                <h2>Elaboración de la receta de Lubina con patatas paso a paso:</h2><br>
+            </section>
+            <section>
+                <h2>Elaboración de la receta de Lubina con patatas paso a paso:</h2>
                 <p>Comenzamos cortando las patatas con una mandolina. Con una grande o dos de buen tamaño podréis cubrir
                     la
                     bandeja del horno. Después picamos la cebolla en juliana fina, y la repartimos sobre las patatas.
                     Añadimos un poco de sal, un chorrito de aceite de oliva virgen extra, 75 ml de agua y horneamos
                     durante
-                    quince minutos a 180º.</p><br>
+                    quince minutos a 180º.</p>
                 <p>En la pescadería habremos pedido que nos preparen la lubina abierta para asar a la espalda pero
                     pediremos que nos dejen la raspa en un lado. Esto nos servirá para controlar cuando está el pescado
                     en
@@ -62,11 +64,11 @@
                     con
                     una pizca de aceite y lo metemos en el horno sobre las patatas que ya estarán empezando a cocinarse.
                 </p>
-                <br>
+                
                 <p>Dejamos que el pescado se ase a la misma temperatura hasta que metiendo una puntilla por debajo de la
                     raspa, veamos que se levanta con facilidad y entonces apagamos el horno y sacamos la fuente. El
                     tiempo
-                    necesario estará entre los 12 y los 20 minutos dependiendo del tamaño de la pieza.</p><br>
+                    necesario estará entre los 12 y los 20 minutos dependiendo del tamaño de la pieza.</p>
                 <p>Retiramos el pescado de la fuente del horno, quitamos la raspa y lo ponemos en una fuente para
                     servirlo
                     con su guarnición. Si las patatas no estuvieran o si vemos que es necesario que se doren un poco
