--- a/pages/pollo_guisado.html
+++ b/pages/pollo_guisado.html
@@ -54,35 +54,37 @@
                     <li>Pimienta negra</li>
                     <li>perejil picado</li>
                 </ul>
+            </section>
+            <section>
                 <h2>Elaboración del guiso:</h2>
                 <p>Pela y pica el ajo y la cebolla (no demasiado fino). Pon una cazuela ancha al fuego y añade aceite.
                     Cuando empiece a calentarse, añade el ajo y deja que se dore. Luego incorpora la cebolla, revuelve
                     bien
-                    y deja que se sofría todo hasta dorarse y notar que las verduras se han ablandado.</p><br>
-                <p>Sazona y salpimenta el pollo, rebózalo con harina y quítale el exceso de ella.</p><br>
+                    y deja que se sofría todo hasta dorarse y notar que las verduras se han ablandado.</p>
+                <p>Sazona y salpimenta el pollo, rebózalo con harina y quítale el exceso de ella.</p>
                 <p>Fríe los muslos de pollo en una sartén con aceite caliente. Cuando estén bien dorados, sácalos a un
                     plato
-                    o fuente y resérvalos.</p><br>
+                    o fuente y resérvalos.</p>
                 <p>Añade el pollo a la cazuela de ajo y cebolla y revuelve. Incorpora el vino y deja que se evapore.
                     Luego
-                    añade un vaso de agua (o 200 ml.).</p><br>
+                    añade un vaso de agua (o 200 ml.).</p>
                 <p>Desmenuza una pastilla de caldo Avecrem por encima de los muslos de pollo y las verduras. Deja que se
-                    cocine a fuego suave unos 15 minutos, y mientras prepara la guarnición del guiso.</p><br>
+                    cocine a fuego suave unos 15 minutos, y mientras prepara la guarnición del guiso.</p>
                 <p>Pela las patatas y córtalas den dados. Añádelas en un recipiente con agua para que suelte la fécula.
                     Pela
                     las zanahorias y córtalas en medias lunas gorditas. Limpia los champiñones y córtalos en cuartos.
                 </p>
-                <br>
+                
                 <p>Pon una sartén al fuego con abundante aceite y cuando coja calor, añade las patatas (ya escurridas y
                     secas) para freír. Deja que se frían (moviéndolas para que no se peguen ni se quemen) durante unos
                     10
-                    minutos aproximadamente.</p><br>
+                    minutos aproximadamente.</p>
                 <p>Incorpora la zanahoria y los champiñones, remueve y deja que todo se fría otros 5 minutos sin dejar
                     de
-                    remover. Una vez esté todo dorado, sácalo a un plato con papel absorbente.</p><br>
-                <p>Luego añádelo a la cazuela del guiso de pollo y mezcla todo con cuidado.</p><br>
+                    remover. Una vez esté todo dorado, sácalo a un plato con papel absorbente.</p>
+                <p>Luego añádelo a la cazuela del guiso de pollo y mezcla todo con cuidado.</p>
                 <p>Prueba de sal y deja que se cocine todo junto unos 4 minutos más o menos. Apaga el fuego y esparce un
-                    poco de perejil picado por encima del guiso.</p><br>
+                    poco de perejil picado por encima del guiso.</p>
                 <p>¡Y listo! Ya podréis disfrutar de un sabroso y apetitoso estofado de pollo al estilo de la abuela.
                 </p>
             </section>
